venice chat working

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Anthropic configuration
-VITE_ANTHROPIC_API_KEY=your-anthropic-api-key-here
+# Venice AI configuration
+VENICE_API_KEY=your-venice-api-key-here
 
 # Convex configuration
 VITE_CONVEX_URL=your-convex-deployment-url-here
